--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,13 +5,10 @@ body {
 	margin: 0 auto;
 }
 
-.full_screan{
-	height: 100vh;
-}
 
 header {
-    background-color: rgb( 25, 25, 25);
-    height:45px;
+    background-color: rgb(30, 30, 30);
+    height: 45px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,7 +33,7 @@ input {
 }
 
 .types {
-	background-color: rgb(30, 30, 30);
+	background-color: rgb(150, 150, 160);
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -61,21 +58,30 @@ input {
 
 .main{
 	display: flex;
-	align-items: strech;
+	align-items: start;
 	height: 100%; 
+	background-color: rgb(170, 170, 180);
 	
 		.settings{
 			padding: 50px 10px;
-			width:15%;
+			width:20%;
+			background-color: white;
+			border-radius: 5px;
+			margin: 10px;
+			margin: 25px;
+
 		}
 		.draw{
-		width:85%;
-		height: auto;
-		margin: 15px;
 		
+		width:80%;
+		height: 100%;
+		margin: 25px;
+
+        		.cnavas{
+        			border: 1px solid black;
+        			
+        		}
 		}
-	
-		
 		
 
 }
@@ -83,6 +89,21 @@ input {
 
 
 .canvas-container { 
-	 flex-grow:1;
+	 
+	 background-color: white;
+	 width: 100%;
+	 height: 100%;
+	 border-radius: 5px;
+
+}
+
+button {
+	background-color: black; 
+	color: white; 
+	border: 1 px solid gray;
+}
+
+lable{
+	color: white;
 }
 
